--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.9.1",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
